--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-name",
+  "name": "grade-de-programacao-back-end",
   "version": "0.0.1",
   "description": "",
   "author": "",
